TheKabal (22 June 2013)
--------------------------------------
In the Timer class, extremely small values (E-6 seconds small) were being reported as whole seconds
In big bang, cleanup how benchmarking is done so that the local timer is only created once
In big bang, streamline the language and config storage into DB down to one SQL insert for each - shaving 5 seconds off the processing time of step 6.
Fix big bang sector placement, it varied between putting 501 in the wrong place to putting a sector 1001, and a couple of other variations. Now actually places what you ask for.

TheKabal (21 June 2013)
--------------------------------------
Changed footer to be more correct, using three-column footer (float with align)
Added new feature, automatically auto-focuses on the submit/continue.etc button. Now you can space bar through all of BB!

TheKabal (18 June 2013)
--------------------------------------
Fix big bang to add a 1-max_planets_sector random number of planets per sector it selects for placement, but no more than the total number of planets
Fix fed space not being created in enough sectors
Fix value of "max sectors" not being honored and set if you set it in the form for bigbang
Fix planet select & insert to be 2 sql calls for infinite sectors, vs. 2 per sector (!)
Add feature that allows big bang to run automatically if checkbox is set
Fix weird language not being set bug where on clean install english would be English, triggering languages to be missing
Added "bigbang", which is the proposed template driven replacement for create universe

TheKabal (3 June 2013)
--------------------------------------
Switch timestamps to use h:i:s instead of h-i-s. Helps with portability to postgresql, and doesn't cause errors on mysql.

TheKabal (2 June 2013)
--------------------------------------
Add a new BntRand class, which includes improved (but still could be improved further!) functions for generating random numbers. BntRand::betterRand is the best choice.