@@ -30,23 +30,19 @@ class Timer
 
     public function start ()
     {
-        $this->t_start = microtime ();
+        $this->t_start = microtime (true);
     }
 
     public function stop ()
     {
-        $this->t_stop  = microtime ();
+        $this->t_stop  = microtime (true);
     }
 
     public function elapsed ()
     {
-        $start_u = substr($this->t_start, 0, 10); $start_s = substr($this->t_start, 11, 10);
-        $stop_u  = substr($this->t_stop, 0, 10);  $stop_s  = substr($this->t_stop, 11, 10);
-        $start_total = floatval ($start_u) + $start_s;
-        $stop_total  = floatval ($stop_u) + $stop_s;
-        $this->t_elapsed = $stop_total - $start_total;
 
-        return $this->t_elapsed;
+        $this->t_elapsed = $this->t_stop - $this->t_start;
+        return round ($this->t_elapsed, 2); // Round it down to two significant digits
     }
 }
 ?>
