@@ -42,7 +42,6 @@ if (isset ($bntreg))
         $bnttimer = $bntreg->get("bnttimer");
         $bnttimer->stop();
         $elapsed = $bnttimer->elapsed();
-        $elapsed = substr ($elapsed, 0, 5);
     }
 }
 else
@@ -151,7 +150,7 @@ echo "<div style='font-size:smaller; text-align:right'><a class='new_link' href=
 echo "<div style='font-size:smaller; text-align:right'>&copy; 2000-" . date ('Y') ." Ron Harwood &amp; the BNT Dev team</div>";
 if ($bntreg->get("footer_show_debug") == true)
 {
-    echo "<div style='font-size:smaller; text-align:right'>" . number_format ($elapsed,2) . " " . $langvars['l_seconds'] . " " . $langvars['l_time_gen_page'] ." / " . floor(memory_get_peak_usage() / 1024) . $langvars['l_peak_mem'] . "</div>";
+    echo "<div style='font-size:smaller; text-align:right'>" . $elapsed . " " . $langvars['l_seconds'] . " " . $langvars['l_time_gen_page'] ." / " . floor(memory_get_peak_usage() / 1024) . $langvars['l_peak_mem'] . "</div>";
 }
 echo "</div></body></html>";
 ?>
